@@ -1,0 +1,38 @@
+[buildout]
+extensions = buildout.dumppickedversions
+             mr.developer
+dump-picked-versions-file = versions-picked.cfg
+allow-picked-versions = true
+parts =
+    omelette
+    test
+    zopepy
+
+extends =
+    http://dist.plone.org/release/4.1/versions.cfg
+develop = .
+
+find-links =
+    http://dist.plone.org/release/4.1
+
+versions = versions
+sources-dir = devel
+eggs = Products.contentmigration
+
+[versions]
+Products.contentmigration = 
+
+[omelette]
+recipe = collective.recipe.omelette
+eggs = ${buildout:eggs}
+
+[zopepy]
+recipe = zc.recipe.egg
+eggs = ${buildout:eggs}
+interpreter = zopepy
+scripts = zopepy
+
+[test]
+recipe = zc.recipe.testrunner
+eggs = Products.contentmigration [test]
+defaults = ['--tests-pattern', '^f?tests$']
